--- a/dental-frontend/src/Style/About.css
+++ b/dental-frontend/src/Style/About.css
@@ -107,3 +107,18 @@
   height: auto;
   padding-left: 500px;
 }
+
+.ab3{
+  height: 300px;
+  padding-left: 500px;
+  padding-top: 100px;
+}
+
+.last{
+  width: 1600px;
+  height: 50px;
+  margin-top: 50px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
