--- a/dental-frontend/src/Style/Home.css
+++ b/dental-frontend/src/Style/Home.css
@@ -73,8 +73,8 @@
 
 .dental {
     font-size: 60px;
-    color: rgb(1, 211, 43);
-  text-shadow: 1px 1px 2px black, 0 0 25px rgb(0, 255, 47), 0 0 5px rgb(26, 235, 99);
+    color: rgb(20, 21, 21);
+  text-shadow: 1px 1px 2px rgb(244, 237, 237), 0 0 25px rgb(0, 255, 47), 0 0 5px rgb(26, 235, 99);
   padding-top: -100px;
 
 }
