--- a/dental-frontend/src/Style/Footer1.css
+++ b/dental-frontend/src/Style/Footer1.css
@@ -38,3 +38,17 @@
     margin-top: 30px;
     padding-bottom: 10px;
   }
+
+  a {
+    text-decoration: none; /* Remove underline from all links */
+  }
+  
+  /* Add a specific class to style only the Links */
+  .link-without-underline {
+    text-decoration: none; /* Remove underline */
+  }
+
+  .link-without-underline1 {
+    color: aliceblue;
+  }
+  
