--- a/dental-frontend/src/Style/Regist.css
+++ b/dental-frontend/src/Style/Regist.css
@@ -1,22 +1,23 @@
 .reg1{
     width: 700px;
-    height: 600px;
+    height: 650px;
     margin-left: 50px;
     margin-top: 10px;
-    background-color: rgb(7, 7, 7);
+    background-color: rgb(229, 53, 53);
 }
 
 .reg2{
     width: 700px;
-    height: 600px;
+    height: 650px;
     margin-right: 50px;
     margin-top: 10px;
 }
 
 .inline-container {
     display: flex;
-    width: 1600px;
-    height: 700px;
+    width: 1550px;
+    height: 650px;
+    background-color: black;
   }
 
   .App {
