--- a/dental-frontend/src/Style/RegisterForm.css
+++ b/dental-frontend/src/Style/RegisterForm.css
@@ -3,9 +3,10 @@
 /* Add your CSS styles here */
 
 .registration-form {
-    max-width: 400px;
+    max-width: 550px;
     margin: 0 auto;
-    padding: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
